Off-canvas menu settings adjustments to resolve jump

--- a/Shared/Styles/_foundationSettings.scss
+++ b/Shared/Styles/_foundationSettings.scss
@@ -523,7 +523,7 @@ $meter-fill-bad                 : $alert-color;
 // 25. Off-canvas
 //----------------------------------------------------------------------------------------------
 
-$offcanvas-size                 : 250px;
+$offcanvas-size                 : 31.25rem;                     // WAS 250px
 $offcanvas-vertical-size        : 250px;
 $offcanvas-background           : $light-gray;
 $offcanvas-shadow               : 0 0 10px rgba($black, 0.7);
